# dotfiles

./: .cursorignore  .gitignore  .waza.yaml  README.md  README_JA.md  brew_install.sh  default_setup.sh  flake.nix  main.sh  memo.md
config/: README.md  README_JA.md  mise-config.toml
dotfiles/: .Brewfile  .zshrc  README.md  README_JA.md
dotfiles/.agent/skills/agent-job-scheduler/apps/agent-job-scheduler/: .gitignore  README.md  pyproject.toml
dotfiles/.agent/skills/agent-job-scheduler/apps/agent-job-scheduler/docs/: requirements.md  roadmap.md
dotfiles/.agent/skills/agent-job-scheduler/apps/agent-job-scheduler/scripts/: install_launch_agent.sh  uninstall_launch_agent.sh
dotfiles/.agent/skills/agent-job-scheduler/apps/agent-job-scheduler/src/agent_job_scheduler/: __init__.py  adapters.py  cli.py  fileio.py  launchd.py  ledger.py  locking.py  masking.py  models.py  rate_limit.py  runner.py  runtime.py  scheduler.py  settings.py  timeutil.py
dotfiles/.agent/skills/agent-job-scheduler/apps/agent-job-scheduler/tests/: test_adapters.py  test_cli.py  test_launchd.py  test_operations.py  test_runner.py  test_scheduler.py
home/: README.md  README_JA.md  dot_Brewfile.tmpl  dot_bash_profile.tmpl  dot_bashrc.tmpl  dot_zshrc
scripts/: README.md  README_JA.md  agent_skill_upstreams.py  apply_updates.sh  brew_dump.sh  brew_install.sh  chezmoi_apply.sh  cleanup_package_caches.sh  default_setup.sh  install_homebrew.sh  install_mas_apps.sh  manage_nix_package_version_override.sh  migrate_brew_to_nix.sh  migrate_to_chezmoi.sh  nix_install.sh  nix_portable_install.sh  (+13 more)
(+362 files in other folders)
